--- a/f2h2h1.github.io/一些开发笔记.html
+++ b/f2h2h1.github.io/一些开发笔记.html
@@ -1987,6 +1987,10 @@ $variable | Get-Member
   <a href="https://reqbin.com/">https://reqbin.com/</a></li>
 <li>在线的 svg 编辑器
   <a href="https://c.runoob.com/more/svgeditor/">https://c.runoob.com/more/svgeditor/</a></li>
+<li>把svg转换成 url的编码
+  <a href="https://yoksel.github.io/url-encoder/">https://yoksel.github.io/url-encoder/</a></li>
+<li>SVG 工具
+  <a href="https://developer.mozilla.org/zh-CN/docs/Web/SVG/Tutorial/Tools_for_SVG">https://developer.mozilla.org/zh-CN/docs/Web/SVG/Tutorial/Tools_for_SVG</a></li>
 <li>可视化的正则表达式<ul>
 <li><a href="https://jex.im/regulex/">https://jex.im/regulex/</a></li>
 <li><a href="https://www.debuggex.com/">https://www.debuggex.com/</a></li>
