--- a/informal.top/Outline of LLM acceleration.html
+++ b/informal.top/Outline of LLM acceleration.html
@@ -134,6 +134,14 @@ Simple introduce and compare different hardware acceleration method in terms of 
 </ul>
 <p><img alt="scalability" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/informal.top/images/2024/1123-01.png"/>{: width="800"}</p>
 <h2>To Read</h2>
+<p>Quantization</p>
+<ul>
+<li><a href="https://leimao.github.io/article/Neural-Networks-Quantization/">Quantization for Neural Networks</a></li>
+</ul>
+<p>Optimizer</p>
+<ul>
+<li><a href="https://arxiv.org/abs/2412.05270">APOLLO: SGD-like Memory, AdamW-level Performance</a></li>
+</ul>
 <p>RNN</p>
 <ul>
 <li><a href="https://arxiv.org/abs/2404.05892">RWKV</a>: RWKV is an RNN with transformer-level LLM performance</li>
