--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -32,7 +32,7 @@ top: true</p>
 <p>A year-end celebration of fundamental web technologies: <a href="https://12daysofweb.dev">https://12daysofweb.dev</a></p>
 <p>B-trees and database indexes: <a href="https://planetscale.com/blog/btrees-and-database-indexes">https://planetscale.com/blog/btrees-and-database-indexes</a></p>
 <p>MySQL isolation levels and how they work: <a href="https://planetscale.com/blog/mysql-isolation-levels-and-how-they-work">https://planetscale.com/blog/mysql-isolation-levels-and-how-they-work</a></p>
-<p>A Beginner’s Guide to the True Order of SQL Operations: <a href="https://blog.jooq.org/a-beginners-guide-to-the-true-order-of-sql-operations">https://blog.jooq.org/a-beginners-guide-to-the-true-order-of-sql-operations</a></p>
+<p>The Super Tiny Compiler: <a href="https://github.com/jamiebuilds/the-super-tiny-compiler">https://github.com/jamiebuilds/the-super-tiny-compiler</a></p>
 <p>Falsehoods programmers believe in: <a href="https://github.com/kdeldycke/awesome-falsehood">https://github.com/kdeldycke/awesome-falsehood</a></p>
 <hr/>
 <h2>Tools and Cool websites</h2>
@@ -99,6 +99,9 @@ top: true</p>
 <p>Log in the node terminal from the browser: <a href="https://github.com/patak-dev/vite-plugin-terminal">https://github.com/patak-dev/vite-plugin-terminal</a></p>
 <p>Share your screen with one simple room code: <a href="https://github.com/tonghohin/screen-sharing">https://github.com/tonghohin/screen-sharing</a></p>
 <p>Web-based document scanner to PDF: <a href="https://github.com/addyosmani/scan">https://github.com/addyosmani/scan</a></p>
+<p>Background removal with Transformers.js: <a href="https://github.com/addyosmani/bg-remove">https://github.com/addyosmani/bg-remove</a></p>
+<p>Your coding year in review: <a href="https://githubunwrapped.com">https://githubunwrapped.com</a></p>
+<p>A list of resources for local-first web development: <a href="https://github.com/mylofi/localfirstweb.dev">https://github.com/mylofi/localfirstweb.dev</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: <a href="https://moderncss.dev">https://moderncss.dev</a></p>
@@ -144,7 +147,6 @@ top: true</p>
 <p>Web Interface Guidelines: <a href="https://github.com/raunofreiberg/interfaces">https://github.com/raunofreiberg/interfaces</a></p>
 <p>The react library to build dashboards fast: <a href="https://github.com/tremorlabs/tremor">https://github.com/tremorlabs/tremor</a></p>
 <p>Copy &amp; Paste React Components for Dashboards: <a href="https://github.com/tremorlabs/tremor-raw">https://github.com/tremorlabs/tremor-raw</a></p>
-<p>SVG spinners: <a href="https://github.com/n3r4zzurr0/svg-spinners">https://github.com/n3r4zzurr0/svg-spinners</a></p>
 <p>The Biggest Collection of Loading Animations: <a href="https://css-loaders.com">https://css-loaders.com</a></p>
 <p>Understanding SVG Paths: <a href="https://www.nan.fyi/svg-paths">https://www.nan.fyi/svg-paths</a></p>
 <p>CSS animations on demand: <a href="https://animista.net">https://animista.net</a></p>
@@ -214,6 +216,7 @@ top: true</p>
 <p>UI Library for Design Engineers: <a href="https://github.com/magicuidesign/magicui">https://github.com/magicuidesign/magicui</a></p>
 <p>Our Journey with Caching: <a href="https://nextjs.org/blog/our-journey-with-caching">https://nextjs.org/blog/our-journey-with-caching</a></p>
 <p>React Visualized: <a href="https://react.gg/visualized">https://react.gg/visualized</a></p>
+<p>A collection of fancy React components: <a href="https://www.fancycomponents.dev">https://www.fancycomponents.dev</a></p>
 <hr/>
 <h2>Vue and Vite ecosystem</h2>
 <p>Updates, tips &amp; opinions from the maintainers of Vue.js: <a href="https://blog.vuejs.org">https://blog.vuejs.org</a></p>
@@ -229,17 +232,16 @@ top: true</p>
 <p>A lightweight, customizable Vue UI library for mobile web apps: <a href="https://vant-ui.github.io">https://vant-ui.github.io</a></p>
 <p>Modular and Accessible UI Components for your Vue Applications (Made for Vue 2.x): <a href="https://vue.chakra-ui.com">https://vue.chakra-ui.com</a></p>
 <p>Vue port of Radix UI Primitives: <a href="https://www.radix-vue.com">https://www.radix-vue.com</a></p>
-<p>Vue port of shadcn-ui: <a href="https://github.com/radix-vue/shadcn-vue">https://github.com/radix-vue/shadcn-vue</a></p>
+<p>Vue port of shadcn-ui: <a href="https://github.com/unovue/shadcn-vue">https://github.com/unovue/shadcn-vue</a></p>
+<p>Build beautiful website using Vue &amp; Nuxt: <a href="https://github.com/unovue/inspira-ui">https://github.com/unovue/inspira-ui</a></p>
 <p>Vue UI Component Library: <a href="https://primevue.org">https://primevue.org</a></p>
 <p>Copy-and-paste components for quickly building app UIs using Vue: <a href="https://github.com/Jettonn/originui-vue">https://github.com/Jettonn/originui-vue</a></p>
 <p>Integrate Clerk into your Vue application: <a href="https://vue-clerk.vercel.app">https://vue-clerk.vercel.app</a></p>
 <p>Drag and drop components that support Vue2 and Vue3: <a href="https://alfred-skyblue.github.io/vue-draggable-plus">https://alfred-skyblue.github.io/vue-draggable-plus</a></p>
 <p>Vue3 wrapper components for smooth-dnd: <a href="https://gilnd.github.io/vue3-smooth-dnd">https://gilnd.github.io/vue3-smooth-dnd</a></p>
 <p>Vue.js and Nuxt Tips, Tricks and good practice: <a href="https://vuejstips.com">https://vuejstips.com</a></p>
-<p>A type safe router for vuejs: <a href="https://github.com/kitbagjs/router">https://github.com/kitbagjs/router</a></p>
-<p>Build beautiful website using Vue &amp; Nuxt: <a href="https://github.com/unovue/inspira-ui">https://github.com/unovue/inspira-ui</a>, <a href="https://github.com/selemondev/spark-ui">https://github.com/selemondev/spark-ui</a></p>
-<p>Create full-stack apps with Nuxt: <a href="https://talks.soubiran.dev/2024-09-17/pragvue">https://talks.soubiran.dev/2024-09-17/pragvue</a></p>
-<p>The Complete Guide to Building a Vue.js Component Library: <a href="https://soubiran.dev/series/the-complete-guide-to-building-a-vue-js-component-library">https://soubiran.dev/series/the-complete-guide-to-building-a-vue-js-component-library</a></p>
+<p>The Guide to Building a Vue.js Component Library: <a href="https://soubiran.dev/series/the-complete-guide-to-building-a-vue-js-component-library">https://soubiran.dev/series/the-complete-guide-to-building-a-vue-js-component-library</a></p>
+<p>The Guide to Setting Up a New Nuxt Project: <a href="https://soubiran.dev/posts/the-perfect-guide-to-setting-up-a-new-nuxt-project">https://soubiran.dev/posts/the-perfect-guide-to-setting-up-a-new-nuxt-project</a></p>
 <p>3D page flip effect for Vue2 and Vue3: <a href="https://github.com/ts1/flipbook-vue">https://github.com/ts1/flipbook-vue</a></p>
 <hr/>
 <h2>Browsers related</h2>
@@ -303,6 +305,7 @@ top: true</p>
 <p>React Components for AI Chat: <a href="https://github.com/Yonom/assistant-ui">https://github.com/Yonom/assistant-ui</a></p>
 <p>Chatbot components based on shadcn/ui: <a href="https://github.com/Blazity/shadcn-chatbot-kit">https://github.com/Blazity/shadcn-chatbot-kit</a></p>
 <p>Introducing the Realtime API: <a href="https://openai.com/index/introducing-the-realtime-api">https://openai.com/index/introducing-the-realtime-api</a></p>
+<p>Realtime API updates — WebRTC: <a href="https://platform.openai.com/docs/guides/realtime-webrtc">https://platform.openai.com/docs/guides/realtime-webrtc</a></p>
 <p>Audio input and output for the OpenAI Chat Completion API: <a href="https://simonwillison.net/2024/Oct/18/openai-audio">https://simonwillison.net/2024/Oct/18/openai-audio</a></p>
 <p>AI-powered search engine that is an open source alternative to Perplexity AI: <a href="https://github.com/ItzCrazyKns/Perplexica">https://github.com/ItzCrazyKns/Perplexica</a></p>
 <p>For LLMs to better code with Jina API: <a href="https://github.com/jina-ai/meta-prompt">https://github.com/jina-ai/meta-prompt</a></p>
@@ -313,6 +316,9 @@ top: true</p>
 <p>A collection of MCP servers: <a href="https://github.com/punkpeye/awesome-mcp-servers">https://github.com/punkpeye/awesome-mcp-servers</a></p>
 <p>Converting files and office documents to Markdown: <a href="https://github.com/microsoft/markitdown">https://github.com/microsoft/markitdown</a></p>
 <p>Conversational video interface with a holiday theme: <a href="https://santa.tavus.io">https://santa.tavus.io</a></p>
+<p>Real-time in-browser speech recognition: <a href="https://huggingface.co/spaces/webml-community/moonshine-web">https://huggingface.co/spaces/webml-community/moonshine-web</a></p>
+<p>An AI assistant that can use your CLI aNd Editor: <a href="https://github.com/cline/cline">https://github.com/cline/cline</a></p>
+<p>2024 AI Timeline: <a href="https://huggingface.co/spaces/reach-vb/2024-ai-timeline">https://huggingface.co/spaces/reach-vb/2024-ai-timeline</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
