--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -4,7 +4,7 @@
 description: ""
 added: "Jun 12 2022"
 tags: [js]</p>
-<h2>updatedDate: "Oct 24 2024"</h2>
+<h2>updatedDate: "Dec 28 2024"</h2>
 <p>TypeScript is a strongly typed programming language that builds on JavaScript. It is currently developed and maintained by Microsoft as an open source project. TypeScript supports multiple programming paradigms such as functional, generic, imperative, and object-oriented.</p>
 <p>Every time you write JavaScript in e.g. VS Code, TypeScript runs behind the curtains and gives you information on built-in APIs. In fact, a lot of people think that they can live without TypeScript because JavaScript support is so fantastic in modern editors. Guess what’s, it has always been TypeScript. <em>In VS Code, open a <code>.ts</code> file, <code>Cmd+Shift+P</code> enter "Select TypeScript Version" to check. There is a "Use VS Code's Version" and "Use Workspace Version" (this is from node_modules).</em></p>
 <h2>Setting up TypeScript</h2>
@@ -28,6 +28,12 @@ yarn add --dev typescript
     "allowJs": true,
     "resolveJsonModule": true,
     "moduleDetection": "force",
+
+    /*
+     * https://github.com/privatenumber/fix-verbatim-module-syntax
+     * Fix error: 'SomeType' is a type and must be imported using a type-only import 
+     * when 'verbatimModuleSyntax' is enabled.
+     */
 
     /* Strictness */
     "strict": true,
@@ -390,7 +396,11 @@ type MyCompProps = ComponentProps&lt;typeof MyComp&gt;
        \________\_______\_______\____/______/
                     never
 </code></pre>
-<blockquote><p>The empty object type <code>{}</code> is unique. Instead of representing an empty object, it actually represents anything that isn't <code>null</code> or <code>undefined</code>. This means that it can accept a number of other types: string, number, boolean, function, symbol, and objects containing properties.</p>
+<blockquote><p>The empty object type <code>{}</code> is unique. Instead of representing an empty object, it actually represents anything that isn't <code>null</code> or <code>undefined</code>. <code>{}</code> can accept a number of other types: string, number, boolean, function, symbol, and objects containing properties.</p>
+<ul>
+<li>The only difference between <code>{}</code> and <code>unknown</code> is that <code>unknown</code> contains every single JavaScript value, including <code>null</code> and <code>undefined</code>.</li>
+<li>Unlike <code>{}</code>, <code>object</code> type does not include primitive types.</li>
+</ul>
 </blockquote>
 <p><strong>Value Types</strong>: We can narrow down primitive types to values.</p>
 <pre><code class="lang-ts">// Type is string, because the value can change.
@@ -528,6 +538,10 @@ type ReturnType&lt;T extends (...args: any) =&gt; any&gt; = T extends (...args: 
 
 // Extracting the Type of a Property from an Object
 type PropertyType&lt;T, K extends keyof T&gt; = T extends { [key in K]: infer P } ? P : never;
+
+type TrimWhitespacePrefix&lt;T&gt; = T extends `${" " | "\t" | "\n"}${infer U}`
+  ? TrimWhitespacePrefix&lt;U&gt;
+  : T;
 </code></pre>
 <pre><code class="lang-ts">// `infer N` extracts a type from the input.
 // `extends number` ensures that the extracted type N is a number.
@@ -810,3 +824,10 @@ npx tsc --init
 </blockquote>
 <p>How to run ts files from command line? There is <a href="https://github.com/TypeStrong/ts-node">ts-node</a> that will compile the code and REPL for node.js: <code>npx ts-node src/foo.ts</code>. <code>tsc</code> writes js to disk. <code>ts-node</code> doesn't need to do that and runs ts on the fly. But it's not typechecking your code. So we recommend to type check your code first with <code>tsc</code> and then run it with <code>ts-node</code> before shipping it.</p>
 <p>Btw, you can use <a href="https://github.com/unjs/jiti">jiti</a> CLI to quickly run any script with TypeScript and native ESM support.</p>
+<p>Node 23 will soon be able to run TypeScript files without any extra configuration <em>(unflagging <code>--experimental-strip-types</code>)</em>.</p>
+<ul>
+<li>Create an <code>index.ts</code> file containing TS syntax. Enums and namespaces are not supported by default.</li>
+<li>Run node <code>index.ts</code> with no further flags.</li>
+<li>Node will strip out the types using a version of swc, then run the resulting code.</li>
+<li>Node will not typecheck your files when it runs them. </li>
+</ul>
