--- a/kexizeroing.github.io/React Server Side Rendering and Server Components.html
+++ b/kexizeroing.github.io/React Server Side Rendering and Server Components.html
@@ -4,7 +4,7 @@
 description: ""
 added: "July 8 2023"
 tags: [react]</p>
-<h2>updatedDate: "Nov 9 2024"</h2>
+<h2>updatedDate: "Dec 23 2024"</h2>
 <h2>Adding Server-Side Rendering</h2>
 <p>SSR focuses on initial page load, sending pre-rendered HTML to the client that must then be hydrated with downloaded JavaScript before it behaves as a typical React app. SSR also only happens one time: when directly navigating to a page.</p>
 <blockquote><p>Debunking the Myth: SSR Isn't Expensive: <a href="https://t3.gg/blog/post/ssr-is-not-expensive">https://t3.gg/blog/post/ssr-is-not-expensive</a></p>
@@ -457,3 +457,5 @@ export default function Page() {
 <li>Next.js automatically generates an API endpoint for each server action. These endpoints are created during the compilation process and are not visible in your codebase. The generated endpoints handle the incoming requests from the client and route them to the corresponding server action. The request includes a special header called "Next-Action" which contains the unique identifier of the server action.</li>
 <li>Server Actions integrate with Next.js' caching and revalidation architecture. <code>revalidatePath</code> accepts a relative URL string where it will clear the cache and revalidate the data for that path after a server action.</li>
 </ul>
+<blockquote><p><em>Server Actions have officially been renamed to Server Functions.</em> Until September 2024, we referred to all Server Functions as “Server Actions”. If a Server Function is passed to an action prop or called from inside an action then it is a Server Action, but not all Server Functions are Server Actions. The naming in this documentation has been updated to reflect that Server Functions can be used for multiple purposes.</p>
+</blockquote>
