--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -71,6 +71,12 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 </code></pre>
 <blockquote><p>An <code>invariant</code> function from <a href="https://github.com/alexreardon/tiny-invariant">tiny-invariant</a> takes a value, and if the value is falsy then the invariant function will throw. If the value is truthy, then the function will not throw.</p>
 </blockquote>
+<h3>Modular architecture of Front-end applications</h3>
+<p>&lt;img alt="apple-style-dock" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/modular-architecture.png" width="700"&gt;</p>
+<ul>
+<li>Components can’t use modules, but can use everything from the UI layer, while modules use components but can’t use pages. And pages only use modules.</li>
+<li>A module shouldn’t use another module, and a component should’t contain complex logic. If logic is still needed, it should be as simple and easily maintainable as possible, otherwise — it’s a module.</li>
+</ul>
 <h3>Writing Modern JavaScript without a Bundler</h3>
 <p><a href="https://playfulprogramming.com/posts/modern-js-bundleless">https://playfulprogramming.com/posts/modern-js-bundleless</a></p>
 <ol>
