--- a/gitee.com/Kenneth-Lee-2012/MySummary/谈谈子女教育问题.html
+++ b/gitee.com/Kenneth-Lee-2012/MySummary/谈谈子女教育问题.html
@@ -1,5 +1,5 @@
-<h2><a href="https://gitee.com/Kenneth-Lee-2012/MySummary/blob/master/花朵的温室/谈谈子女教育问题.rst">仓库源文</a></h2>
-<p>.. Kenneth Lee 版权所有 2017-2019</p>
+<h2><a href="https://gitee.com/Kenneth-Lee-2012/MySummary/blob/master/软件构架设计/谈谈子女教育问题.rst">仓库源文</a></h2>
+<p>.. Kenneth Lee 版权所有 2016-2020</p>
 <p>:Authors: Kenneth Lee
 :Version: 1.0</p>
 <p>谈谈子女教育问题</p>
@@ -25,7 +25,7 @@
 情都干不好。这就是为什么夫唯不居，所以不去。你能选择的是事，不是这个事情上的属
 性。事情上的属性是随着事情自然得到的东西，不能作为事情的目标。把属性作为目标，
 不就是原地踏步吗？：</p>
-<pre><code>    .. figure:: _static/居和目标的距离.jpg
+<pre><code>    .. figure:: _static/不居.jpg
 </code></pre>
 <p>我们谈家庭教育的“目标”，是要选择那个和你的现在有距离的那个点，不是身边的那个点
 。所以我们才说宠辱若惊（身边的东西），贵大患若身（和目标的距离）。因为你和目标
