--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8780 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8791 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=mabbs.github.io/%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93.html>2025-01-01 年终总结</a></li>
+
+<li><a href=iphyer.github.io/2024%E6%80%BB%E7%BB%93%20%E5%B9%B6%202025%E8%A7%84%E5%88%92.html>2024-12-31 2024总结 并 2025规划</a></li>
+
+<li><a href=hijiangtao.github.io/2024%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93.html>2024-12-31 2024年终总结</a></li>
+
+<li><a href=iphyer.github.io/CS%20%E8%87%AA%E5%AD%A6%E7%BD%91%E7%AB%99.html>2024-12-30 CS 自学网站</a></li>
+
+<li><a href=conge.livingwithfcs.org/2024%20%E5%8D%81%E4%BA%8C%E6%9C%88%E8%AF%BB%E7%BE%8E%E5%9B%BD%E5%8F%B2%20%E5%B0%8F%E8%AF%B4%E2%80%A6%E2%80%A6%204%E6%9C%AC.html>2024-12-30 2024 十二月读美国史 小说…… 4本</a></li>
+
+<li><a href=mabbs.github.io/ESXi%E5%92%8CPVE%E7%9A%84%E4%BD%BF%E7%94%A8%E4%BD%93%E9%AA%8C%E4%B8%8E%E5%AF%B9%E6%AF%94.html>2024-12-29 ESXi和PVE的使用体验与对比</a></li>
+
+<li><a href=informal.top/Weekly-%2318%20Cross%20Entropy%20Loss%20of%20Triton.html>2024-12-29 Weekly-#18 Cross Entropy Loss of Triton</a></li>
+
+<li><a href=lutaonan.com/2024%3A%20%E5%9C%A8%E5%A4%9C%E6%B5%B7%E4%B8%AD%E8%A7%82%E6%9C%9B%E6%B5%AA%E6%BD%AE.html>2024-12-28 2024: 在夜海中观望浪潮</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202451%20%E5%A6%BB%E5%AD%90%E7%9A%84%E7%94%9F%E6%97%A5.html>2024-12-27 父范学堂 2451 妻子的生日</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202451%20%E5%86%AC%E8%87%B3%E5%BA%86%E7%A5%9D.html>2024-12-27 折返点 2451 冬至庆祝</a></li>
+
+<li><a href=informal.top/Weekly-%2317%20Triton%20Puzzles.html>2024-12-22 Weekly-#17 Triton Puzzles</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E8%AF%AD%E4%B9%89%E7%BA%A0%E5%81%8F%E2%80%94%E2%80%94%E7%BB%86%E8%8A%82%E8%B0%83%E7%A0%94%E7%9A%84%E7%9B%AE%E7%9A%84%E5%92%8C%E6%96%B9%E5%90%91.html>2024-12-20 语义纠偏——细节调研的目的和方向</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202450%20Europa%20%E5%92%8C%20%E8%83%A1%E6%A1%83%E5%A4%B9%E5%AD%90.html>2024-12-18 父范学堂 2450 Europa 和 胡桃夹子</a></li>
 
@@ -637,7 +661,7 @@
 
 <li><a href=sund.site/%E5%A6%82%E4%BD%95%E8%AE%BE%E8%AE%A1%E4%B8%80%E4%B8%AA%E7%AC%A6%E5%90%88%E5%B7%A5%E4%B8%9A%E6%A0%87%E5%87%86%E7%9A%84%E5%AE%A1%E8%AE%A1%E7%B3%BB%E7%BB%9F.html>2024-04-15 如何设计一个符合工业标准的审计系统</a></li>
 
-<li><a href=iphyer.github.io/2024Q1%E6%80%BB%E7%BB%93.html>2024-04-15 2024Q1总结</a></li>
+<li><a href=iphyer.github.io/2024Q1%20%E6%80%BB%E7%BB%93.html>2024-04-15 2024Q1 总结</a></li>
 
 <li><a href=babyno.top/%E5%9C%A8%E6%9C%AC%E5%9C%B0%E8%B7%91%E4%B8%80%E4%B8%AAAI%E6%A8%A1%E5%9E%8B%284%29%20-%20%E4%BC%9A%E8%AF%B4%E8%AF%9D%E7%9A%84%E6%A8%A1%E5%9E%8B.html>2024-04-15 在本地跑一个AI模型(4) - 会说话的模型</a></li>
 
@@ -967,7 +991,7 @@
 
 <li><a href=iphyer.github.io/USA%E5%8D%B0%E8%B1%A120%3A%20%E5%A4%8F%E5%A8%81%E5%A4%B7-%E6%AC%A7%E8%83%A1%E5%B2%9B%E6%B8%B8%E8%AE%B0.html>2024-01-15 USA印象20: 夏威夷-欧胡岛游记</a></li>
 
-<li><a href=iphyer.github.io/2023%E5%B9%B4%E6%80%BB%E7%BB%93%20AND%202024%20%E8%A7%84%E5%88%92.html>2024-01-15 2023年总结 AND 2024 规划</a></li>
+<li><a href=iphyer.github.io/2023%E6%80%BB%E7%BB%93%20%E5%B9%B6%202024%E8%A7%84%E5%88%92.html>2024-01-15 2023总结 并 2024规划</a></li>
 
 <li><a href=jerkwin.github.io/dssp%E6%95%B0%E6%8D%AE%E7%BB%98%E5%9B%BE%E8%84%9A%E6%9C%ACdssp2gp.html>2024-01-14 dssp数据绘图脚本dssp2gp</a></li>
 
@@ -10782,8 +10806,6 @@
 <li><a href=tifa-233.com/%E3%80%90%E6%B4%9B%E8%B0%B7%E6%97%A5%E6%8A%A5%2353%E3%80%91%E6%B5%85%E8%B0%88%E4%B8%80%E4%BA%9B%E6%B1%82%E8%BF%91%E4%BC%BC%E5%80%BC%E7%9A%84%E6%96%B9%E6%B3%95.html>2018-08-09 【洛谷日报#53】浅谈一些求近似值的方法</a></li>
 
 <li><a href=hijiangtao.github.io/%E8%B0%88%E8%B0%88%20App%20Shell%20%E4%B8%8E%20Skeleton%20Screen%20%E5%AE%9E%E7%8E%B0.html>2018-08-09 谈谈 App Shell 与 Skeleton Screen 实现</a></li>
-
-<li><a href=tifa-233.com/%E3%80%8C%E7%BA%BF%E6%AE%B5%E6%A0%91%E7%9A%84%E6%89%A9%E5%B1%95%E4%B9%8B%E6%B5%85%E8%B0%88zkw%E7%BA%BF%E6%AE%B5%E6%A0%91%E3%80%8D%E4%B8%80%E6%96%87%E7%9A%84%E6%B5%8B%E8%AF%95%E4%BB%A3%E7%A0%81%E3%80%81%E6%95%B0%E6%8D%AE%E3%80%81%E8%AF%A6%E7%BB%86%E6%B5%8B%E8%AF%95%E7%BB%93%E6%9E%9C%E4%B8%8E%E7%94%9F%E6%88%90%E5%99%A8.html>2018-08-08 「线段树的扩展之浅谈zkw线段树」一文的测试代码、数据、详细测试结果与生成器</a></li>
 
 <li><a href=iphyer.github.io/%E6%90%AC%E5%AE%B6%E8%AE%B0%E5%BD%951%EF%BC%9A%E9%BA%A6%E8%BF%AA%E9%80%8A%E6%90%AC%E5%AE%B6%E5%9C%B0%E5%9D%80%E6%9B%B4%E6%96%B0%E6%80%BB%E7%BB%93.html>2018-08-07 搬家记录1：麦迪逊搬家地址更新总结</a></li>
 
