--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -385,6 +385,7 @@ while (true) {
 <li><a href="https://github.com/kexiZeroing/langchain-llamaindex-ollama">https://github.com/kexiZeroing/langchain-llamaindex-ollama</a></li>
 <li><a href="https://github.com/ollama/ollama-js">https://github.com/ollama/ollama-js</a></li>
 <li><a href="https://github.com/open-webui/open-webui">https://github.com/open-webui/open-webui</a></li>
+<li><a href="https://simonwillison.net/2024/Dec/27/open-webui">https://simonwillison.net/2024/Dec/27/open-webui</a></li>
 </ul>
 </li>
 <li><p>LM Studio</p>
