--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -174,6 +174,8 @@ new Vue({
    }
  }
 </code></pre>
+<blockquote><p><a href="https://github.com/toss/es-toolkit">es-toolkit</a> is a modern JavaScript utility library that's 2-3 times faster and up to 97% smaller—a major upgrade to lodash.</p>
+</blockquote>
 </li>
 <li><p>The <code>sideEffects</code> property of <code>package.json</code> declares whether a module has side effects on import. When side effects are present, unused modules and unused exports may not be tree shaken due to the limitations of static analysis.</p>
 </li>
